# oxide

./: .gitignore  CMakeLists.txt  LICENSE  README.md  examples.cpp  oxide.hpp
.github/workflows/: ci.yml
cmake/: oxideConfig.cmake.in
examples/: covariant_dispatch.cpp  database.cpp  functional.cpp  match.cpp  vector.cpp
include/: option.hpp  output.hpp  oxide.hpp
include/oxide/: option.hpp  output.hpp
